tests/NormalTests/paczka1/fuzzy1/57724408.err
Error in line 12: Om4Enti2yA A661 35,3
Error in line 19: qe5w9I A548 95,28
Error in line 24: Om4Enti2yA S100 81,7
Error in line 29: 7WyPKEs S731 90,6
Error in line 34: A548 A548 10,9
